Also import and export imagemagick's so-called "attributes". This includes saving of user comments to file. Should work on all imagemagick versions, but it wouldn't surprise me if there were some weird version that depends on those ImageAttributeIterator calls that are in the online docs but not in my install. If you find such a version, file a bug report for it.

BUG: 112723

svn path=/trunk/koffice/; revision=461107